cabal-version:      2.4
name:               advent2022
version:            0.1.0.0

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Day03
    build-depends:    base ^>=4.16.4.0, split, containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable advent2022
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        advent2022

    hs-source-dirs:   app
    default-language: Haskell2010
